## 1.7.2

  * fix key generation for requests with no query strings

## 1.7.0

  * Meta stores now receive a third ttl argument to write when use_native_ttl is used.

## 1.6.1

  * Revert 'No longer read responses from cache when we already have them'

## 1.6.0

  * Noop backend
  * No longer read responses from cache when we already have them
  * renamed files from entitystore -> entity_store (metastore/cachecontrol/appengine) and added warns for old ones

## 1.5.1

  * fix key generation for query strings that include encoded equals

## 1.5.0

  * only catch StandardError and not Exception

## 1.4.3

  * After overriding the REQUEST_METHOD, store the original request method in "rack.methodoverride.original_method"

## 1.4.1

  * Ignore invalid Expires date as per RFC

## 1.4.0

  * Not invalidating the cache for preflight CORS request

## 1.3.1 / October 2015

  * Support Ruby 1.9

## 1.3 / Octorber 2015

  * Ruby 2.0 only

  * Gracefully degrade when cache store goes offline

  * allow_reload/revalidate is not enabled by default

  * Make Rack::Cache multithread friendly

## 1.2 / March 2012

  * Fix a cookie leak vulnerability effecting large numbers of Rails 3.x installs:
    https://github.com/rtomayko/rack-cache/pull/52

  * Never 304 on PUT or POST requests.

  * Misc bundler and test tooling fixes.

## 1.1 / September 2011

  * Allow (INM/IMS) validation requests through to backend on miss. Makes it
    possible to use validation for private / uncacheable responses. A number of
    people using Rails's stale?() helper reported that their validation logic was
    never kicking in.

  * Add rack env rack-cache.force-pass option to bypass rack-cache on
    per request basis

  * Fix an issue with memcache namespace not being set when using the
    :namespace option instead of :prefix_key.

  * Fix test failures due to MockResponse changes in recent Rack
    version (issue #34)

## 1.0.3 / August 2011

  * Fix bug passing options to memcached and dalli
